execute method
