# docs/swagger.json
@@ -23,36 +23,47 @@
                             }
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/v1.response"
-                        }
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
                     }
                 }
             }
         },
         "/mortgage/execute": {
-            "get": {
+            "post": {
+                "description": "Calculates mortgage payments and provides a summary of the payment plan based on the input details and selected credit program.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Execute credit",
+                "tags": [
+                    "Mortgage"
+                ],
+                "summary": "Mortgage Calculation",
+                "parameters": [
+                    {
+                        "description": "Mortgage calculation request payload",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/mortgage.Request"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Successful mortgage calculation with loan details",
                         "schema": {
                             "$ref": "#/definitions/v1.executeResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/v1.response"
-                        }
+                        "description": "Internal server error",
+                        "schema": {}
                     }
                 }
             }
@@ -138,20 +149,28 @@
                 }
             }
         },
+        "mortgage.Request": {
+            "type": "object",
+            "properties": {
+                "initial_payment": {
+                    "type": "integer"
+                },
+                "months": {
+                    "type": "integer"
+                },
+                "object_cost": {
+                    "type": "integer"
+                },
+                "program": {
+                    "$ref": "#/definitions/mortgage.Program"
+                }
+            }
+        },
         "v1.executeResponse": {
             "type": "object",
             "properties": {
                 "result": {
                     "$ref": "#/definitions/entity.Mortgage"
-                }
-            }
-        },
-        "v1.response": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": "message"
                 }
             }
         }
